--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -2,15 +2,16 @@ MEMORY {
 	ZP:	start = $00, size = $100, type = rw;
 	LORAM:	start = $0200, size = $3d00;
 	HIRAM:	start = $4000, size = $a000;
-	ROM:	start = $e000, size = $2000, file = %O;
+	ROM:	start = $e000, size = $2000, file = %O, define = yes;
 }
 SEGMENTS {
 	ZEROPAGE:	load = ZP, type = zp;
-	CODE:		load = ROM, type = wprot;
-	RODATA:		load = ROM, type = wprot;
-	DATA:		load = LORAM, type = rw;
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
 	BUFFERS:	load = HIRAM, type = bss, start = $4000;
+	CODE:		load = ROM, type = wprot;
+	RODATA:		load = ROM, type = wprot;
+	DATA:		load = ROM, type = rw;
+	RELOC:		load = ROM, run = LORAM, type = rw, define = yes;
 	VECTORS:	load = ROM, type = ro, start = $fffa;
 }
 FEATURES {
