page aligned rodata segment

--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -9,7 +9,7 @@ SEGMENTS {
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
 	BUFFERS:	load = HIRAM, type = bss, start = $4000;
 	CODE:		load = ROM, type = wprot;
-	RODATA:		load = ROM, type = wprot;
+	RODATA:		load = ROM, type = wprot, align = $100;
 	DATA:		load = ROM, type = rw;
 	RELOC:		load = ROM, run = LORAM, type = rw, define = yes;
 	VECTORS:	load = ROM, type = ro, start = $fffa;
