--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -1,13 +1,11 @@
 MEMORY {
 	ZP:	start = $00, size = $100, type = rw;
-	LORAM:	start = $0200, size = $3d00;
-	HIRAM:	start = $4000, size = $a000;
-	ROM:	start = $e000, size = $2000, file = %O, define = yes;
+	LORAM:	start = $0200, size = $1e00;
+	ROM:	start = $c000, size = $4000, file = %O, define = yes;
 }
 SEGMENTS {
 	ZEROPAGE:	load = ZP, type = zp;
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
-	BUFFERS:	load = HIRAM, type = bss, start = $4000;
 	CODE:		load = ROM, type = wprot;
 	RODATA:		load = ROM, type = wprot, align = $100;
 	DATA:		load = ROM, type = rw;
