added font binary

--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -5,12 +5,19 @@ MEMORY {
 }
 SEGMENTS {
 	ZEROPAGE:	load = ZP, type = zp;
+	VOLZP:		load = ZP, type = zp, start = $f0;
+	DEVZP:		load = ZP, type = zp, start = $f8;
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
+	RELOC:		load = ROM, run = LORAM, type = rw, define = yes;
+	VOLBSS:		load = LORAM, type = bss, start = $1f00;
+	DEVBSS:		load = LORAM, type = bss, start = $1f40;
 	CODE:		load = ROM, type = wprot;
 	RODATA:		load = ROM, type = wprot, align = $100;
 	DATA:		load = ROM, type = rw;
-	RELOC:		load = ROM, run = LORAM, type = rw, define = yes;
-	VECTORS:	load = ROM, type = ro, start = $fffa;
+	VOLVECTORS:	load = ROM, type = ro, start = $ff00;
+	DEVVECTORS:	load = ROM, type = ro, start = $ff40;
+	CTLVECTORS:	load = ROM, type = ro, start = $ff50;
+	CPUVECTORS:	load = ROM, type = ro, start = $fffa;
 }
 FEATURES {
 	CONDES:	segment = RODATA,
