created jumptables for public routines

--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -1,12 +1,16 @@
 MEMORY {
-	ZP:	start = $00, size = $100, type = rw;
+	LOWZP:	start = $00, size = $80, type = rw;
+	HIGHZP:	start = $c0, size = $40, type = rw;
 	LORAM:	start = $0200, size = $1e00;
+	# $2000..$3eff is reserved for the flash buffer
+	# $3f00..$3fff is memory mapped I/O
+	# $4000..$bfff is reserved for the cluster buffer
 	ROM:	start = $c000, size = $4000, file = %O, define = yes;
 }
 SEGMENTS {
-	ZEROPAGE:	load = ZP, type = zp;
-	VOLZP:		load = ZP, type = zp, start = $f0;
-	DEVZP:		load = ZP, type = zp, start = $f8;
+	ZEROPAGE:	load = LOWZP, type = zp;
+	DEVZP:		load = HIGHZP, type = zp, start = $e0;
+	VOLZP:		load = HIGHZP, type = zp, start = $f0;
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
 	RELOC:		load = ROM, run = LORAM, type = rw, define = yes;
 	VOLBSS:		load = LORAM, type = bss, start = $1f00;
@@ -17,6 +21,8 @@ SEGMENTS {
 	VOLVECTORS:	load = ROM, type = ro, start = $ff00;
 	DEVVECTORS:	load = ROM, type = ro, start = $ff40;
 	CTLVECTORS:	load = ROM, type = ro, start = $ff50;
+	DBGVECTORS:	load = ROM, type = ro, start = $ff60;
+	GFXVECTORS:	load = ROM, type = ro, start = $ff80;
 	CPUVECTORS:	load = ROM, type = ro, start = $fffa;
 }
 FEATURES {
