--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -23,6 +23,7 @@ SEGMENTS {
 	CTLVECTORS:	load = ROM, type = ro, start = $ff50;
 	DBGVECTORS:	load = ROM, type = ro, start = $ff60;
 	GFXVECTORS:	load = ROM, type = ro, start = $ff80;
+	VERSION:	load = ROM, type = ro, start = $ffe0;
 	CPUVECTORS:	load = ROM, type = ro, start = $fffa;
 }
 FEATURES {
