added rs-232 boot when holding down s

--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -2,8 +2,9 @@ MEMORY {
 	LOWZP:	start = $00, size = $80, type = rw;
 	HIGHZP:	start = $c0, size = $40, type = rw;
 	LORAM:	start = $0200, size = $1e00;
-	# $2000..$3eff is reserved for the flash buffer
-	# $3f00..$3fff is memory mapped I/O
+	FLASH:	start = $2000, size = $1e00;
+	# $2000..$3dff is reserved for the flash buffer
+	# $3e00..$3fff is memory mapped I/O
 	# $4000..$bfff is reserved for the cluster buffer
 	ROM:	start = $c000, size = $4000, file = %O, define = yes;
 }
@@ -12,12 +13,12 @@ SEGMENTS {
 	DEVZP:		load = HIGHZP, type = zp, start = $e0;
 	VOLZP:		load = HIGHZP, type = zp, start = $f0;
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
-	RELOC:		load = ROM, run = LORAM, type = rw, define = yes;
 	VOLBSS:		load = LORAM, type = bss, start = $1f00;
 	DEVBSS:		load = LORAM, type = bss, start = $1f40;
 	CODE:		load = ROM, type = wprot;
 	RODATA:		load = ROM, type = wprot, align = $100;
 	DATA:		load = ROM, type = rw;
+	RELOC:		load = ROM, run = FLASH, type = rw, define = yes;
 	VOLVECTORS:	load = ROM, type = ro, start = $ff00;
 	DEVVECTORS:	load = ROM, type = ro, start = $ff40;
 	CTLVECTORS:	load = ROM, type = ro, start = $ff50;
