added rom checksum

--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -15,6 +15,7 @@ SEGMENTS {
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
 	VOLBSS:		load = LORAM, type = bss, start = $1f00;
 	DEVBSS:		load = LORAM, type = bss, start = $1f40;
+	CHECKSUM:	load = ROM, type = wprot;
 	CODE:		load = ROM, type = wprot;
 	RODATA:		load = ROM, type = wprot, align = $100;
 	DATA:		load = ROM, type = rw;
