added DSKVECTORS, made lots of segments optional

--- a/bigboot.cfg
+++ b/bigboot.cfg
@@ -10,21 +10,22 @@ MEMORY {
 }
 SEGMENTS {
 	ZEROPAGE:	load = LOWZP, type = zp;
-	DEVZP:		load = HIGHZP, type = zp, start = $e0;
-	VOLZP:		load = HIGHZP, type = zp, start = $f0;
+	DEVZP:		load = HIGHZP, type = zp, start = $e0, optional = yes;
+	VOLZP:		load = HIGHZP, type = zp, start = $f0, optional = yes;
 	BSS:		load = LORAM, type = bss, define = yes, align = $100;
-	VOLBSS:		load = LORAM, type = bss, start = $1f00;
-	DEVBSS:		load = LORAM, type = bss, start = $1f40;
+	VOLBSS:		load = LORAM, type = bss, start = $1f00, optional = yes;
+	DEVBSS:		load = LORAM, type = bss, start = $1f40, optional = yes;
 	CHECKSUM:	load = ROM, type = wprot;
 	CODE:		load = ROM, type = wprot;
 	RODATA:		load = ROM, type = wprot, align = $100;
 	DATA:		load = ROM, type = rw;
-	RELOC:		load = ROM, run = FLASH, type = rw, define = yes;
-	VOLVECTORS:	load = ROM, type = ro, start = $ff00;
-	DEVVECTORS:	load = ROM, type = ro, start = $ff40;
-	CTLVECTORS:	load = ROM, type = ro, start = $ff50;
-	DBGVECTORS:	load = ROM, type = ro, start = $ff60;
-	GFXVECTORS:	load = ROM, type = ro, start = $ff80;
+	RELOC:		load = ROM, run = FLASH, type = rw, define = yes, optional = yes;
+	VOLVECTORS:	load = ROM, type = ro, start = $ff00, optional = yes;
+	DEVVECTORS:	load = ROM, type = ro, start = $ff40, optional = yes;
+	CTLVECTORS:	load = ROM, type = ro, start = $ff50, optional = yes;
+	DBGVECTORS:	load = ROM, type = ro, start = $ff60, optional = yes;
+	GFXVECTORS:	load = ROM, type = ro, start = $ff80, optional = yes;
+	DSKVECTORS:	load = ROM, type = ro, start = $ffa0, optional = yes;
 	VERSION:	load = ROM, type = ro, start = $fff0;
 	CPUVECTORS:	load = ROM, type = ro, start = $fffa;
 }
